# PTRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  main.cpp
common/: Camera.cpp  Image.cpp  Image.h  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  Primitives.cpp  Primitives.h  Ray.h  Type.h  Utils.cpp  Utils.h
core/: BVH.cpp  BVH.h  Bound3.cpp  Bound3.h  Camera.cpp  Camera.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Macrodefine.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Primitives.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneParser.cpp  SceneParser.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h
scenes/: README.md
scenes/Box-Bunny/: box-bunny.mtl
scenes/Box-Pbr-Bunny/: pbr-box-bunny.mtl
shaders/: frag.glsl  vert.glsl
