cmake_minimum_required(VERSION 3.15)
project(PTRenderer)

set(CMAKE_CXX_STANDARD 17)
if(APPLE)
    set(PathForOpenCV "thirdparty/opencv/share/OpenCV" CACHE STRING "Set OpenCV cmake config location")
    message(STATUS ${PathForOpenCV})
#    set(opencv "" "thirdparty/opencv/share/OpenCV")
    if(CMAKE_C_COMPILER_ID MATCHES "Clang")
        set(OpenMP_C "${CMAKE_C_COMPILER}")
        set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
        set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
        set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
        set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
        set(OpenMP_libiomp5_LIBRARY ${OpenMP_C_LIB_NAMES})
    endif()
    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
        set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
        set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
        set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
        set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
        set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES})
        set(OpenMP_CXX_FLAGS="-Xpreprocessor -fopenmp")
        set(OpenMP_CXX_LIB_NAMES="omp")
        set(OpenMP_omp_LIBRARY=/usr/local/opt/libomp/lib/libomp.dylib)
    endif()

endif()
#find_package(OpenMP REQUIRED)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_library(glad STATIC thirdparty/glad/src/glad.c)
target_include_directories(glad PRIVATE thirdparty/glad/include)
add_subdirectory(thirdparty/assimp)
add_subdirectory(thirdparty/glm)
add_subdirectory(thirdparty/glfw)
#add_subdirectory(thirdparty/opencv)

#add_subdirectory(thirdparty/tinyobjloader)
aux_source_directory(core CORE_SOURCE)
aux_source_directory(common COMMON_SOURCE)

add_executable(${PROJECT_NAME} main.cpp
               ${CORE_SOURCE}
               ${COMMON_SOURCE}
                common/Type.h
        common/Utils.h core/Transform.cpp core/Transform.h
        thirdparty/pugixml/src/pugixml.cpp
        )

target_include_directories(${PROJECT_NAME} PRIVATE assimp)
target_include_directories(${PROJECT_NAME} PRIVATE glm)
target_include_directories(${PROJECT_NAME} PRIVATE glfw)
target_include_directories(${PROJECT_NAME} PRIVATE thirdparty/glad/include)
target_include_directories(${PROJECT_NAME} PRIVATE common)

if(APPLE)
    target_include_directories(${PROJECT_NAME} PRIVATE /usr/local/opt/libomp/include)

    set(OpenCV_DIR ${PathForOpenCV})
endif()
find_package(OpenCV REQUIRED)
target_include_directories(${PROJECT_NAME} PRIVATE ${OpenCV_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS})
target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
target_link_libraries(${PROJECT_NAME} PRIVATE glm)
target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
target_link_libraries(${PROJECT_NAME} PRIVATE glad)
target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenMP_LIBRARIES})

message(STATUS ${OpenCV_LIBS})
if(UNIX)
target_link_libraries(${PROJECT_NAME} PRIVATE ${CMAKE_DL_LIBS})
endif(UNIX)
#target_link_libraries(${PROJECT_NAME} tinyloader)
